[style] fix callout/code background in dark mode

--- a/css/screen.css
+++ b/css/screen.css
@@ -18,18 +18,6 @@ a:visited { border-bottom: 1px solid #AAA; }
 a:hover, a:visited:hover { border-bottom: 1px solid transparent; }
 a.image { border-bottom: 0; }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: black;
-    color: #DDD;
-  }
-
-  a {
-    color: #DDD;
-    border-color: #DDD;
-  }
-}
-
 h1, h2, h3, h4 {
   font-family: "p22-underground", sans-serif;
   font-weight: 600;
@@ -212,4 +200,20 @@ ul.talk-events {
   content: "";
   display: table;
   clear: both;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: black;
+    color: #DDD;
+  }
+
+  a {
+    color: #DDD;
+    border-color: #DDD;
+  }
+
+  .callout, code, pre {
+    background-color: #262626;
+  }
 }
